--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,8 +88,8 @@ color:#fff;
     background: rgba(0, 0, 0, 0) none repeat scroll 0 0 !important;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
-    background-color: #ffa100;
-    border-bottom: 10px solid #e49102;
+    background-color:#55AEA8;
+    border-bottom: 10px solid #55AEA8;
     color: #fff;
 }
 .affix
@@ -103,8 +103,8 @@ transition: all 0.35s ease 0s;
     padding: 50px 26px 35px;
 }
 .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
-     background-color: #ffa100;
-    border-bottom: 10px solid #e49102;
+     background-color: #55AEA8;
+    border-bottom: 10px solid #55AEA8;
     color: #fff;
 }
 .header-text {
@@ -129,7 +129,7 @@ transition: all 0.35s ease 0s;
 	margin-bottom:30px;
 }
 .header-text h2 span {
-    color: orange;
+    color: #55AEA8;
 }
 .header-btn {
     border: 2px solid #fff;
@@ -143,8 +143,8 @@ transition: all 0.35s ease 0s;
 	transition: all 0.35s ease 0s;
 }
 .header-btn:hover {
-    border: 2px solid #ff6000;
-    color: #ff6000;
+    border: 2px solid #55AEA8;
+    color: #55AEA8;
 	text-decoration:none;
 	transition: all 0.35s ease 0s;
 }
@@ -157,8 +157,8 @@ transition: all 0.35s ease 0s;
 	transition: all 0.35s ease 0s;
 }
 .btn-ornge:hover {   
-    border: 2px solid #ffae00;    
-	color:#ffae00;
+    border: 2px solid #55AEA8;    
+	color:#55AEA8;
 	background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
 	transition: all 0.35s ease 0s;
 }
@@ -182,7 +182,7 @@ transition: all 0.35s ease 0s;
 	left:0;
 }
 #about h2::after {
-    background: #ffa100 none repeat scroll 0 0;
+    background: #55AEA8 none repeat scroll 0 0;
     bottom: 9px;
     content: "";
     height: 2px;
@@ -226,7 +226,7 @@ margin:20px 0 0 0px;
     padding: 8px;
 }
 .t-box .social-links a {
-    color: #ffa100;
+    color: #55AEA8;
 }
 .t-box .social-links a:hover {
     color: #333;
@@ -265,7 +265,7 @@ margin:20px 0 0 0px;
 	left:0;
 }
 #Services h2::after {
-    background: #ffa100 none repeat scroll 0 0;
+    background:#55AEA8 none repeat scroll 0 0;
     bottom: 9px;
     content: "";
     height: 2px;
@@ -356,7 +356,7 @@ transform: skewY(171.5deg);
 }
 .for-box .clr2
 {
-background:#ff8500;
+background:#55AEA8;
 color:#fff;
 padding: 50px 0 50px;
 text-align:center;
@@ -370,13 +370,13 @@ position:absolute;
 content:"";
 width:100%;
 height:40%;
-background:#da7104;
+background:#55AEA8;
 left:0;
 top: -20px;
 transform: skewY(171.5deg);
 }
 .clr2-a::after {
-    background: #ff8500 none repeat scroll 0 0;
+    background: #55AEA8 none repeat scroll 0 0;
     content: "";
     height: 137%;
     position: absolute;
@@ -444,7 +444,7 @@ transform: skewY(171.5deg);
 }
 .for-box .clr4
 {
-background:#ff6100;
+background:#55AEA8;
 color:#fff;
 padding: 50px 0 50px;
 text-align:center;
@@ -457,13 +457,13 @@ position:absolute;
 content:"";
 width:100%;
 height:40%;
-background:#cf5105;
+background:#55AEA8;
 left:0;
 top: -20px;
 transform: skewY(171.5deg);
 }
 .clr4-a::after {
-    background: #ff6100 none repeat scroll 0 0;
+    background: #55AEA8 none repeat scroll 0 0;
     content: "";
     height: 137%;
     position: absolute;
@@ -511,12 +511,12 @@ padding:10px;
 }
 .owl-theme .owl-controls .owl-buttons div {
     background: rgba(255, 255, 255, 0.08) none repeat scroll 0 0 !important;
-    color: #ffa100 !important;    
+    color: #55AEA8!important;    
     font-size: 65px !important;
     opacity: 1 !important;
 }
 .owl-theme .owl-controls .owl-buttons div:hover {
-    background: #ffa100 none repeat scroll 0 0 !important;
+    background: #55AEA8 none repeat scroll 0 0 !important;
     color: #fff !important;    
     font-size: 65px !important;
     opacity: 1 !important;
@@ -545,11 +545,11 @@ padding:10px;
     text-align: center;
 }
 .counter .size {
-    color: #f3ba08;
+    color:#68aca7;
     font-size: 45px;
 }
 .counter span {
-    color: #ff8400;
+    color: #55AEA8;
     font-size: 20px;
 }
 /*----------- gallery ------------*/
@@ -816,7 +816,7 @@ blockquote {
 /*----------- blog ------------*/
 
 #blog {
-   background: #ffa100;
+   background: #55AEA8;
     color: #fff;
     overflow: hidden;
 	padding:100px 0 220px;
@@ -880,7 +880,7 @@ blockquote {
 	background:#fff;
 }
 #blog a:hover{
-    border: 1px solid #ffc259;
+    border: 1px solid#55AEA8;
     color: #fff;
     display: inline-table;
     font-size: 18px;
@@ -937,7 +937,7 @@ blockquote {
     width: 100%;
 }
 #contact .btn-block {
-    background: #ffa100 none repeat scroll 0 0;
+    background: #55AEA8 none repeat scroll 0 0;
     border-radius: 0;
     color: #000;
     display: block;
@@ -980,7 +980,7 @@ blockquote {
     width: 50px;
 }
 #footer::before {
-    background: orange none repeat scroll 0 0;
+    background: #55AEA8 none repeat scroll 0 0;
     content: "";
     height: 100%;
     position: absolute;
@@ -1161,7 +1161,7 @@ width:100%;
     width: 65% !important;
 }
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: orange;
+    background-color: #55AEA8;
 }
 .navbar-default .navbar-toggle .icon-bar {
     background-color: #fff;
@@ -1235,7 +1235,7 @@ width:100%;
     width: 65% !important;
 }
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: orange;
+    background-color: #55AEA8;
 }
 .navbar-default .navbar-toggle .icon-bar {
     background-color: #fff;
@@ -1317,7 +1317,7 @@ width:100%;
     width: 65% !important;
 }
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: orange;
+    background-color: #55AEA8;
 }
 .navbar-default .navbar-toggle .icon-bar {
     background-color: #fff;
