--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,7 +356,7 @@ transform: skewY(171.5deg);
 }
 .for-box .clr2
 {
-background:#55AEA8;
+background:#65daaf;
 color:#fff;
 padding: 50px 0 50px;
 text-align:center;
@@ -400,7 +400,7 @@ transform: skewY(171.5deg);
 }
 .for-box .clr3
 {
-background:#0195ff;
+background:#01a2ff;
 color:#fff;
 text-align:center;
 padding: 50px 0 50px;
@@ -414,7 +414,7 @@ position:absolute;
 content:"";
 width:100%;
 height:40%;
-background:#0482d9;
+background:#049dd9;
 left:0;
 top: -20px;
 transform: skewY(171.5deg);
@@ -444,7 +444,7 @@ transform: skewY(171.5deg);
 }
 .for-box .clr4
 {
-background:#55AEA8;
+background:#3ee0d6;
 color:#fff;
 padding: 50px 0 50px;
 text-align:center;
